<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="#ebd5b3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/text_view_title"
            android:layout_toStartOf="@id/image_view_liked"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/sketch_gothic_school"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/image_view_liked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_thumb_down"
            android:contentDescription="@string/liked" />

        <TextView
            android:id="@+id/text_view_inputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/text_view_inputs"
            android:layout_below="@id/text_view_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>