<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    tools:context=".MainActivity"
    android:background="@drawable/background_parchment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">
        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/hellish_quart_logo"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/character_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sketch_gothic_school"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/combos"
                android:textColor="@color/black"
                android:textSize="80sp" />

            <TextView
                android:id="@+id/settings_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sketch_gothic_school"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="80sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>